--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
       </div>
     </div>
   </div>
+   <p>
+    <a href="https://github.com/Nataliapeppi/weather-app">Open-source code</a> by Natalia Peppi
+      </p>
     <script src = "src/app.js"></script>
   </body>
 </html>
